--- a/app/src/main/res/layout/item_product_detail_penilaian_produk.xml
+++ b/app/src/main/res/layout/item_product_detail_penilaian_produk.xml
@@ -81,7 +81,7 @@
         android:id="@+id/cv_lihat_semua"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/rv_rating_view">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
