--- a/app/src/main/res/layout/item_product_detail_desc.xml
+++ b/app/src/main/res/layout/item_product_detail_desc.xml
@@ -67,7 +67,7 @@
             android:layout_height="wrap_content"
             android:drawablePadding="@dimen/_4sdp"
             android:textColor="@color/star_color"
-
+            android:text="0"
             android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginStart="@dimen/_10sdp"
             app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_location"
