--- a/app/src/main/res/layout/item_product_detail_desc.xml
+++ b/app/src/main/res/layout/item_product_detail_desc.xml
@@ -105,7 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/description"
-            style="@style/Text.Large"
+            style="@style/Text.Small.Bold"
 
             android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginStart="@dimen/_10sdp"
@@ -116,12 +116,37 @@
             android:id="@+id/tv_detail_product_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/Text.Medium"
+            style="@style/Text.Small"
 
             android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginStart="@dimen/_10sdp"
             android:layout_marginEnd="@dimen/_10sdp"
             app:layout_constraintTop_toBottomOf="@+id/tv_description"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
+            android:id="@+id/tv_tanggal_pelaksanaan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tanggal_pelaksanaan"
+            style="@style/Text.Small.Bold"
+
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginStart="@dimen/_10sdp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_detail_product_description"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+
+        <TextView
+            android:id="@+id/tv_detail_product_tanggal_pelaksanaan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="@style/Text.Small"
+
+            android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginStart="@dimen/_10sdp"
+            android:layout_marginEnd="@dimen/_10sdp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_tanggal_pelaksanaan"
             app:layout_constraintStart_toStartOf="parent"/>
 
 <!--
