--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -181,7 +181,14 @@
             app:argType="com.devfutech.paradisonesia.domain.model.PriceID" />
         <action
             android:id="@+id/action_productDetailFragment_self"
-            app:destination="@id/productDetailFragment" />
+            app:destination="@id/productDetailFragment"
+            app:popUpTo="@+id/productDetailFragment"
+            app:popUpToInclusive="true"/>
+        <action
+            android:id="@+id/action_productDetailFragment_to_productFragment"
+            app:destination="@id/productFragment"
+            app:popUpTo="@+id/productFragment"
+            app:popUpToInclusive="true"/>
 
     </fragment>
 
