--- a/app/src/main/res/layout/item_product_detail_penilaian_produk.xml
+++ b/app/src/main/res/layout/item_product_detail_penilaian_produk.xml
@@ -29,12 +29,12 @@
                 app:layout_constraintStart_toStartOf="parent"
                 />
 
-            <RatingBar
+            <androidx.appcompat.widget.AppCompatRatingBar
                 android:id="@+id/rb_total_rating_review"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                style="@style/Widget.AppCompat.RatingBar.Small"
+                style="@style/AppCompatRatingBarSmall"
                 app:layout_constraintTop_toBottomOf="@+id/tv_penilaian_produk"
                 app:layout_constraintStart_toStartOf="parent"/>
 
