--- a/app/src/main/res/layout/item_product_detail_reviews.xml
+++ b/app/src/main/res/layout/item_product_detail_reviews.xml
@@ -34,11 +34,10 @@
             android:id="@+id/rb_total_rating_review"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/Widget.AppCompat.RatingBar.Small"
+            style="@style/AppCompatRatingBarSmall"
             app:layout_constraintTop_toBottomOf="@+id/tv_username"
             app:layout_constraintBottom_toBottomOf="@+id/iv_user"
-            app:layout_constraintStart_toStartOf="@+id/tv_username"
-            />
+            app:layout_constraintStart_toStartOf="@+id/tv_username" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_review"
