Refresh Token OKE 0.5

--- a/app/src/main/res/layout/merchant_register_fragment.xml
+++ b/app/src/main/res/layout/merchant_register_fragment.xml
@@ -65,6 +65,20 @@
                         android:hint="@string/merchant_address" />
                 </com.google.android.material.textfield.TextInputLayout>
 
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/il_merchant_description"
+                    style="@style/InputLayout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/et_merchant_description"
+                        style="@style/EditText"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/" />
+                </com.google.android.material.textfield.TextInputLayout>
+
                 <androidx.appcompat.widget.LinearLayoutCompat
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
